# Open-Multi-Agent-Deep-Research

./: .env.example  .gitignore  LICENSE-MIT.md  README.md  main.py  pyproject.toml
.deepeval/: .deepeval-cache.json
deep_research/: research.py
deep_research/agents/: agent.py
deep_research/prompts/: citation_agent.md  research_lead_agent.md  research_sub_agent.md
deep_research/services/: llm_service.py  search_service.py
deep_research/tools/: __init__.py  definitions.py  executor.py
deep_research/utils/: citation_context.py  memory.py  output_parser.py  prompt_loader.py  session_id.py  tracing.py
evals/: deep_research.py
evals/eval_prompts/: test1.md  test2.md
evals/utils/: eval_llm_client.py
example_outputs/autonomous_vehicles_safety_report/: eval_report.md  report.md  research_plan.md  sub_report_incident_types_agent_call_AZNyxGinspXkb4Ah7DsGEL5F_step13.md  sub_report_reporting_gaps_agent_call_9uZZPZPkBdeXIEC0Jtcs0OIp_step6.md  sub_report_safety_rates_agent_call_WtfatwPQybKGVYHgqwFnh4Tb_step9.md  sub_report_variations_analysis_agent_call_hbITfqV2UPtOYBWJmDAi76TX_step3.md
example_outputs/autonomous_vehicles_safety_report/citation_editor/: memory.json
example_outputs/autonomous_vehicles_safety_report/incident_types_agent/: memory.json
example_outputs/autonomous_vehicles_safety_report/lead_researcher/: memory.json
example_outputs/autonomous_vehicles_safety_report/reporting_gaps_agent/: memory.json
tests/: test_citation_context.py  test_memory_integration.py  test_output_parser.py
(+2 files in other folders)
